# pontifficate

./: .gitignore  LICENSE  README.md  pyproject.toml
pontifficate/: cli.py  logging_config.py  metadata.py  normalization.py  paired_analysis.py  segmentation.py  utils.py
tests/: test_metadata.py  test_normalization.py  test_segmentation.py  test_utils.py
tests/integration/: test_paired_analysis.py
